Change setup settings

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,6 @@
 recursive-include cmsplugin_slick/templates *
 recursive-include cmsplugin_slick/static *
 recursive-include cmsplugin_slick/locale *
+recursive-include cmsplugin_slick/migrations *
+
+recursive-exclude * *.py[co]
